--- a/src/Smartstore.Web/Views/Shared/Partials/_CreateOrUpdateAddress.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_CreateOrUpdateAddress.cshtml
@@ -6,7 +6,9 @@
 
 <input asp-for="Id" type="hidden" />
 <input asp-for="CreatedOnUtc" type="hidden" />
+@*INFO: required by AddressValidator*@
 <input asp-for="CountryName" type="hidden" />
+<input asp-for="EditDefaultAddressOptions" type="hidden" />
 
 <div class="form-horizontal">
 
