--- a/src/Smartstore.Web/Views/Customer/Info.cshtml
+++ b/src/Smartstore.Web/Views/Customer/Info.cshtml
@@ -9,15 +9,11 @@
     ViewBag.PageClassToken = "info";
     ViewBag.PageTitle = T("Account.CustomerInfo").Value;
 
-    var shippingMethods = (List<SelectListItem>)ViewBag.ShippingMethods;
-    var paymentMethods = (List<SelectListItem>)ViewBag.PaymentMethods;
-    var quickCheckoutEnabled = (bool)ViewBag.QuickCheckoutEnabled;
-    var showShippingMethods = quickCheckoutEnabled && shippingMethods.Count > 0;
-    var showPaymentMethods = quickCheckoutEnabled && paymentMethods.Count > 0;
+    var shippingMethods = (ViewBag.ShippingMethods as List<SelectListItem>) ?? new();
+    var paymentMethods = (ViewBag.PaymentMethods as List<SelectListItem>) ?? new();
 }
 
 <form asp-action="Info" class="form-horizontal" method="post">
-
     <div asp-validation-summary="ModelOnly"></div>
 
     <zone name="customer_info_top"></zone>
@@ -66,10 +62,10 @@
                 <label asp-for="DateOfBirth" class="col-form-label"></label>
             </div>
             <div class="col-lg-9">
-                <input type="date" asp-for="DateOfBirth" 
-                    class="native-validation"
-                    max="@DateTime.Now.ToString("yyyy-MM-dd")" 
-                    min="@DateTime.Now.AddYears(-110).ToString("yyyy-MM-dd")" />
+                <input type="date" asp-for="DateOfBirth"
+                       class="native-validation"
+                       max="@DateTime.Now.ToString("yyyy-MM-dd")"
+                       min="@DateTime.Now.AddYears(-110).ToString("yyyy-MM-dd")" />
             </div>
         </div>
 
@@ -206,7 +202,7 @@
         <div sm-if="Model.CountryEnabled" class="form-group row">
             <label asp-for="CountryId" class="col-lg-3 col-form-label"></label>
             <div class="col-lg-9">
-                @{ 
+                @{
                     var countrySelectorViewData = new
                     {
                         nullable = true,
@@ -267,7 +263,7 @@
         </div>
     </fieldset>
 
-    <fieldset sm-if="Model.AllowCustomersToSetTimeZone || showShippingMethods || showPaymentMethods" class="content-group">
+    <fieldset sm-if="Model.AllowCustomersToSetTimeZone || shippingMethods.Count > 0 || paymentMethods.Count > 0" class="content-group">
         <legend><span>@T("Account.Preferences")</span></legend>
         <div sm-if="Model.AllowCustomersToSetTimeZone" class="form-group row">
             <label asp-for="TimeZoneId" class="col-lg-3 col-form-label"></label>
@@ -276,14 +272,14 @@
                 <span asp-validation-for="TimeZoneId"></span>
             </div>
         </div>
-        <div sm-if="showShippingMethods" class="form-group row">
+        <div sm-if="shippingMethods.Count > 0" class="form-group row">
             <label asp-for="DefaultShippingMethodId" class="col-lg-3 col-form-label"></label>
             <div class="col-lg-9">
                 <select asp-for="DefaultShippingMethodId" asp-items="shippingMethods" asp-placeholder="@T("Common.Unspecified")"></select>
                 <span asp-validation-for="DefaultShippingMethodId"></span>
             </div>
         </div>
-        <div sm-if="showPaymentMethods" class="form-group row">
+        <div sm-if="paymentMethods.Count > 0" class="form-group row">
             <label asp-for="DefaultPaymentMethod" class="col-lg-3 col-form-label"></label>
             <div class="col-lg-9">
                 <select asp-for="DefaultPaymentMethod" asp-items="paymentMethods" asp-placeholder="@T("Common.Unspecified")"></select>
