--- a/src/Smartstore.Web/Views/Customer/Info.cshtml
+++ b/src/Smartstore.Web/Views/Customer/Info.cshtml
@@ -1,6 +1,9 @@
-﻿@using Smartstore.Web.Models.Customers;
+﻿@using Smartstore.Web.Models.Customers
+@using Smartstore.Core.Checkout.Cart 
 
 @model CustomerInfoModel
+
+@inject ShoppingCartSettings CartSettings
 
 @{
     Assets.AppendTitleParts(T("PageTitle.Account"));
@@ -11,6 +14,8 @@
 
     var shippingMethods = (ViewBag.ShippingMethods as List<SelectListItem>) ?? new();
     var paymentMethods = (ViewBag.PaymentMethods as List<SelectListItem>) ?? new();
+    var canChangeDefaultShipping = shippingMethods.Count > 0 && CartSettings.QuickCheckoutEnabled && CartSettings.CustomersCanChangeDefaultShipping;
+    var canChangeDefaultPayment = paymentMethods.Count > 0 && CartSettings.QuickCheckoutEnabled && CartSettings.CustomersCanChangeDefaultPayment;
 }
 
 <form asp-action="Info" class="form-horizontal" method="post">
@@ -263,7 +268,7 @@
         </div>
     </fieldset>
 
-    <fieldset sm-if="Model.AllowCustomersToSetTimeZone || shippingMethods.Count > 0 || paymentMethods.Count > 0" class="content-group">
+    <fieldset sm-if="Model.AllowCustomersToSetTimeZone || canChangeDefaultShipping || canChangeDefaultPayment" class="content-group">
         <legend><span>@T("Account.Preferences")</span></legend>
         <div sm-if="Model.AllowCustomersToSetTimeZone" class="form-group row">
             <label asp-for="TimeZoneId" class="col-lg-3 col-form-label"></label>
@@ -272,14 +277,14 @@
                 <span asp-validation-for="TimeZoneId"></span>
             </div>
         </div>
-        <div sm-if="shippingMethods.Count > 0" class="form-group row">
+        <div sm-if="canChangeDefaultShipping" class="form-group row">
             <label asp-for="DefaultShippingMethodId" class="col-lg-3 col-form-label"></label>
             <div class="col-lg-9">
                 <select asp-for="DefaultShippingMethodId" asp-items="shippingMethods" asp-placeholder="@T("Common.Unspecified")"></select>
                 <span asp-validation-for="DefaultShippingMethodId"></span>
             </div>
         </div>
-        <div sm-if="paymentMethods.Count > 0" class="form-group row">
+        <div sm-if="canChangeDefaultPayment" class="form-group row">
             <label asp-for="DefaultPaymentMethod" class="col-lg-3 col-form-label"></label>
             <div class="col-lg-9">
                 <select asp-for="DefaultPaymentMethod" asp-items="paymentMethods" asp-placeholder="@T("Common.Unspecified")"></select>
