Addresses: make first and last name optional if a company name has been specified Added missing server-side address validation if a new address has been entered in checkout RTL: use `bidi-embed` if first name and last name are displayed separately

--- a/src/Smartstore.Web/Views/Customer/Addresses.cshtml
+++ b/src/Smartstore.Web/Views/Customer/Addresses.cshtml
@@ -32,7 +32,9 @@
                 <div class="card-body">
                     <h4 class="card-title h5">
                         <a href="@Url.Action("AddressEdit", new { id = address.Id })" title="@T("Common.Edit")" rel="nofollow">
-                            @address.GetFormattedName()
+                            <span sm-if="address.FirstName.IsEmpty() && address.LastName.IsEmpty()">@address.Company</span>
+                            <span class="bidi-embed">@address.FirstName</span>
+                            <span class="bidi-embed">@address.LastName</span>
                         </a>
                     </h4>
                     <div class="mb-2">
