--- a/src/Smartstore.Web/Views/Shared/Partials/_OrderReviewData.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_OrderReviewData.cshtml
@@ -18,7 +18,8 @@
                 @address.Company
             </div>
             <div class="name">
-                @address.GetFormattedName()
+                <span class="bidi-embed first-name">@address.FirstName</span>
+                <span class="bidi-embed last-name">@address.LastName</span>
             </div>
             <div sm-if="address.StreetAddressEnabled && address.Address1.HasValue()" class="address1">
                 @address.Address1
