--- a/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
@@ -47,6 +47,7 @@
                                     <div class="address-data mt-3">
                                         <div class="name pb-2">
                                             <strong>
+                                                <span sm-if="item.FirstName.IsEmpty() && item.LastName.IsEmpty()">@item.Company</span>
                                                 <span class="bidi-embed">@item.FirstName</span>
                                                 <span class="bidi-embed">@item.LastName</span>
                                             </strong>
@@ -129,5 +130,10 @@
             $('#nextstep').trigger('click');
             return false;
         });
+
+        @if (!ViewData.ModelState.IsValid)
+        {
+            <text>$.scrollTo($('.address-form'), 400, { offset: -40 });</text>
+        }
     });
 </script>
