--- a/src/Smartstore.Modules/Smartstore.Stripe/Views/Shared/Components/StripeElements/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.Stripe/Views/Shared/Components/StripeElements/Default.cshtml
@@ -20,12 +20,12 @@
     <script>
         $(function () {
             if (typeof Stripe !== 'undefined') {
-                Smartstore.Stripe.initPaymentElement('@Model.PublicApiKey', '@Model.ClientSecret', '@Module.ApiVersion');
+                Smartstore.Stripe.initPaymentElement('@Model.PublicApiKey', '@Model.ClientSecret', '@StripeHelper.ApiVersion');
             }
             else {
                 var script = document.getElementById("stripe-js");
                 script.onload = function () {
-                    Smartstore.Stripe.initPaymentElement('@Model.PublicApiKey', '@Model.ClientSecret', '@Module.ApiVersion');
+                    Smartstore.Stripe.initPaymentElement('@Model.PublicApiKey', '@Model.ClientSecret', '@StripeHelper.ApiVersion');
                 };
             }
 
