--- a/src/Smartstore.Web/Views/Checkout/Terminal.Confirm.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Terminal.Confirm.cshtml
@@ -23,7 +23,7 @@
 }
 
 <widget target-zone="order_progress">
-    <partial name="CheckoutProgress" model="new CheckoutProgressModel { CheckoutProgressStep = CheckoutProgressStep.Confirm }" />
+    @await Component.InvokeAsync("CheckoutProgress", new { action = nameof(CheckoutController.Confirm) })
 </widget>
 
 <div class="page checkout-confirm-page">
