Checkout: added shopping cart property to specify whether shipping is required

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_checkout.scss
@@ -54,6 +54,10 @@
     text-decoration: none !important;
 }
 
+.costep-link.disabled {
+    pointer-events: none;
+}
+
 .costep-icon {
     width: 12px;
     height: 12px;
