--- a/src/Smartstore.Web/Views/Shared/Components/CheckoutProgress/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/CheckoutProgress/Default.cshtml
@@ -2,14 +2,18 @@
 
 @model List<CheckoutProgressStepModel>
 
+@{
+    var colClass = Model.Count > 3 ? "col-2" : "col-4";
+}
+
 <zone name="checkout_steps_before" />
 
 <div class="costeps row g-0 mx-auto">
     @foreach (var step in Model)
     {
-        <div class="col-2 costep @step.StateClass" data-step="@step.Name">
-            <a class="costep-link@(step.Visited || step.Active ? string.Empty : " disabled")" 
-               href="@(step.Visited || step.Active ? step.Url : "javascript:;")">
+        <div class="costep @colClass @step.StateClass" data-step="@step.Name">
+            <a class="costep-link@(step.Visited || step.Active ? string.Empty : " disabled")"
+                href="@(step.Visited || step.Active ? step.Url : "javascript:;")">
                 <i class="costep-icon"></i>
                 <span class="costep-label">@step.Label</span>
             </a>
